@@ -1,3 +1,6 @@
+Major changes in 3.28.1:
+* Updated translations
+
 Major changes in 3.28.0:
 * Updated translations
 
